feat: integrate khalti to initiate booking payments
