# src/bookings/bookings.route.ts
@@ -1,12 +1,19 @@
 import express from "express";
 const router = express.Router();
 
-import { getAll, create } from "./bookings.controller";
+import { getAll, create, initiatePayment } from "./bookings.controller";
 import { isAuthorized } from "../common/middlewares/permissions";
-import { createBookingSchema } from "./bookings.schema";
+import { createBookingSchema, initiatePaymentSchema } from "./bookings.schema";
 import { validateRequest } from "../common/middlewares/validator";
 
 router.get("/", isAuthorized, getAll);
 router.post("/", isAuthorized, createBookingSchema, validateRequest, create);
+router.post(
+  "/:id/payments",
+  isAuthorized,
+  initiatePaymentSchema,
+  validateRequest,
+  initiatePayment
+);
 
 export default router;
